--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Slack bot for estimating Pivotal Tracker stories",
   "main": "run.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha"
+    "test": "node_modules/.bin/jshint pivotal-slacker.js; node_modules/.bin/mocha"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "chai": "^2.1.1",
+    "jshint": "^2.6.3",
     "mocha": "^2.2.1"
   }
 }
